hphp/test/quick/hh_numbers.php.expectf

Fatal error: Decimal number is too big: 100000000000000000000000000000000 in %s/hh_numbers.php on line 2
